# dris

./: .editorconfig  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/dris-build/: Cargo.toml  README.md
crates/dris-build/src/: cargo.rs  codegen.rs  graph.rs  inject.rs  lib.rs  model.rs  pipeline.rs  resolve.rs  scan.rs  type_util.rs  validate.rs
crates/dris-build/tests/: generate.rs
crates/dris-macros/: Cargo.toml  README.md
crates/dris-macros/src/: lib.rs
crates/dris-macros/tests/: smoke.rs
crates/dris-rt/: Cargo.toml  README.md
crates/dris-rt/src/: lib.rs
crates/dris-rt/tests/: reexport_macros.rs
examples/axum-users/: Cargo.toml
examples/axum-users/src/: main.rs
examples/demo/: Cargo.toml  build.rs
examples/demo/src/: main.rs
