[package]
name = "dris-macros"
version = "0.1.0"
edition = "2024"
description = "dris 的属性宏（#[component]/#[constructor]）"
documentation = "https://docs.rs/dris-macros"
repository = "https://github.com/wuhaiji/dris"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.92"
keywords = ["di", "dependency-injection", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
