[package]
name = "axum-users"
version = "0.1.0"
edition = "2024"
build = "build.rs"
publish = false

[dependencies]
dris-rt = { path = "../../crates/dris-rt" }

axum = "0.7"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "time"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
dris-build = { path = "../../crates/dris-build" }
